Adding new windows for git and python mail debugger

--- a/tmux_django_tpl.conf
+++ b/tmux_django_tpl.conf
@@ -8,5 +8,8 @@ send-keys -t myproject 'cd ~/dev/myproject/ && . env/bin/activate && djs' C-m
 send-keys -t myproject:1.3 'cd ~/dev/myproject/ && vim' C-m
 new-window -t myproject -n databases
 send-keys -t myproject:2 'cd ~/dev/myproject/ && djd' C-m
+new-window -t scarlet-sandbox -n git
+new-window -t scarlet-sandbox -n mail
+send-keys -t scarlet-sandbox 'python -m smtpd -n -c DebuggingServer localhost:1025' C-m
 select-window -t 1
 select-pane -t 3
