Adding bindings for copy/paste

--- a/tmux.conf
+++ b/tmux.conf
@@ -3,13 +3,13 @@
 #------------------------------------------------
 
 #----
-#  $ tmux new -s session_name 
-#  $ tmux attach -t session_name 
+#  $ tmux new -s session_name
+#  $ tmux attach -t session_name
 #  $ tmux ls
 #
-#  C-b d => Dettach session from tmux windown
-#  C-b , => Rename current window
-#  C-b c => Create new window
+#  Ctrl-b d => Dettach session from tmux windown
+#  Ctrl-b , => Rename current window
+#  Ctrl-b c => Create new window
 #----
 
 # use UTF8
@@ -66,6 +66,20 @@ bind J resize-pane -D 5
 bind K resize-pane -U 5
 bind L resize-pane -R 5
 
+# Copy&paste Vi style
+# Ctrl-b ESC
+# Move with k, j, l, h
+# Mark with `v`, copy with `y`
+# Ctrl-b ESC
+# Paste with `p`
 # brew install reattach-to-user-namespace
 # Copy with mouse using Alt + Opt keys
-set -g default-command "reattach-to-user-namespace -l /bin/zsh"
+set -g default-command "reattach-to-user-namespace -l zsh"
+unbind [
+bind ` copy-mode
+unbind p
+bind p paste-buffer
+bind -t vi-copy 'v' begin-selection
+bind -t vi-copy 'y' copy-selection
+bind -t vi-copy Escape cancel
+bind y run "tmux save-buffer - | reattach-to-user-namespace pbcopy"
